--- a/src/main/resources/assets/atmosfera/lang/en_us.json
+++ b/src/main/resources/assets/atmosfera/lang/en_us.json
@@ -1,16 +1,4 @@
 {
     "options.atmosfera.title": "Atmosfera",
-    "atmosfera.waves": "Waves",
-    "atmosfera.plains_nighttime": "Plains (at night)",
-    "atmosfera.plains_daytime": "Plains (at day)",
-    "atmosfera.desert_nighttime": "Desert (at day)",
-    "atmosfera.desert_daytime": "Desert (at day)",
-    "atmosfera.swamp_nighttime": "Swamp (at night)",
-    "atmosfera.swamp_daytime": "Swamp (at day)",
-    "atmosfera.jungle": "Jungle Sounds",
-    "atmosfera.ocean": "Opean Ocean Sounds",
-    "atmosfera.river": "River Flowing",
-    "atmosfera.wind": "Wind",
-    "atmosfera.grass": "Grass Rustling",
-    "atmosfera.leaves": "Leaves Rustling"
+    "options.atmosfera.reset": "Reset All"
 }
