--- a/src/main/resources/assets/atmosfera/lang/en_us.json
+++ b/src/main/resources/assets/atmosfera/lang/en_us.json
@@ -1,4 +1,17 @@
 {
     "options.atmosfera.title": "Atmosfera",
-    "options.atmosfera.reset": "Reset All"
+    "options.atmosfera.reset": "Reset All",
+    "atmosfera.waves": "Waves",
+    "atmosfera.plains_nighttime": "Plains (at night)",
+    "atmosfera.plains_daytime": "Plains (at day)",
+    "atmosfera.desert_nighttime": "Desert (at day)",
+    "atmosfera.desert_daytime": "Desert (at day)",
+    "atmosfera.swamp_nighttime": "Swamp (at night)",
+    "atmosfera.swamp_daytime": "Swamp (at day)",
+    "atmosfera.jungle": "Jungle Sounds",
+    "atmosfera.ocean": "Open Ocean Sounds",
+    "atmosfera.river": "River Flowing",
+    "atmosfera.wind": "Wind",
+    "atmosfera.grass": "Grass Rustling",
+    "atmosfera.leaves": "Leaves Rustling"
 }
