~ Adds missing translation for daytime swamp sounds ~ Fixes sounds not loading on some machines with non-English localization

--- a/src/main/resources/assets/atmosfera/lang/en_us.json
+++ b/src/main/resources/assets/atmosfera/lang/en_us.json
@@ -5,6 +5,7 @@
     "atmosfera:desert_nighttime": "Desert (night)",
     "atmosfera:desert_daytime": "Desert (day)",
     "atmosfera:swamp_nighttime": "Swamp (night)",
+    "atmosfera:swamp_daytime": "Swamp (day)",
     "atmosfera:jungle": "Jungle Sounds",
     "atmosfera:ocean": "Open Ocean Sounds",
     "atmosfera:river": "River Flowing",
