GH-25: Seperated owls from other sounds, so people getting annoyed by them can disable them

--- a/src/main/resources/resourcepacks/dungeons/assets/atmosfera/lang/en_us.json
+++ b/src/main/resources/resourcepacks/dungeons/assets/atmosfera/lang/en_us.json
@@ -5,12 +5,14 @@
   "atmosfera.dungeons_desert_nighttime": "Desert - Nighttime",
   "atmosfera.dungeons_forest_daytime": "Forest - Daytime",
   "atmosfera.dungeons_forest_nighttime": "Forest - Nighttime",
+  "atmosfera.dungeons_forest_nighttime_owl": "Forest - Owl",
   "atmosfera.dungeons_forest_rainy": "Forest - Rainy",
   "atmosfera.dungeons_forest_snowy_daytime": "Forest - Snowy - Daytime",
   "atmosfera.dungeons_forest_snowy_nighttime": "Forest - Snowy - Nighttime",
   "atmosfera.dungeons_grass": "Grass",
   "atmosfera.dungeons_grassland_daytime": "Grassland - Daytime",
   "atmosfera.dungeons_grassland_nighttime": "Grassland - Nighttime",
+  "atmosfera.dungeons_grassland_nighttime_owl": "Grassland - Owl",
   "atmosfera.dungeons_grassland_rainy": "Grassland - Rainy",
   "atmosfera.dungeons_grassland_snowy_daytime": "Grassland - Snowy - Daytime",
   "atmosfera.dungeons_grassland_snowy_nighttime": "Grassland - Snowy - Nighttime",
@@ -49,12 +51,14 @@
   "subtitle.atmosfera.dungeons_desert_nighttime": "Desert sizzles",
   "subtitle.atmosfera.dungeons_forest_daytime": "Forest breathes",
   "subtitle.atmosfera.dungeons_forest_nighttime": "Forest rests",
+  "subtitle.atmosfera.dungeons_forest_nighttime_owl": "Owl (Forest)",
   "subtitle.atmosfera.dungeons_forest_rainy": "Forest refreshes",
   "subtitle.atmosfera.dungeons_forest_snowy_daytime": "Forest chills",
   "subtitle.atmosfera.dungeons_forest_snowy_nighttime": "Forest shivers",
   "subtitle.atmosfera.dungeons_grass": "Grass rustles",
   "subtitle.atmosfera.dungeons_grassland_daytime": "Grassland breathes",
   "subtitle.atmosfera.dungeons_grassland_nighttime": "Grassland rests",
+  "subtitle.atmosfera.dungeons_grassland_nighttime_owl": "Owl (Grassland)",
   "subtitle.atmosfera.dungeons_grassland_rainy": "Grassland refreshes",
   "subtitle.atmosfera.dungeons_grassland_snowy_daytime": "Grassland chills",
   "subtitle.atmosfera.dungeons_grassland_snowy_nighttime": "Grassland shivers",
